metadata-classic/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>ActivityDateMinusOne__c</fullName>
        <description>Used in specific Activity (Task &amp; Events) reports that use the THIS WEEK or LAST WEEK date range based on the Activity date, to automatically match Thumbtack&apos;s work week, allowing for automation of weekly reports and dashboards.</description>
        <formula>ActivityDate - 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity Date (Minus One)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AssignedToManager__c</fullName>
        <description>Formula field to display the name of the Activity Assigned to (Owner) Manager.  Used for reporting.</description>
        <formula>Owner:User.Manager.FirstName + &quot; &quot; + Owner:User.Manager.LastName</formula>
        <label>Assigned to Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallRecordingLink__c</fullName>
        <formula>IF(NOT ISBLANK(Five9__Five9SessionId__c), &apos;&apos;,
IF(ISBLANK(CallObject),&apos; &apos;, LOCC_App__LO_CC_base_URL__c &amp; &quot;/html/play.cgi?session_id=&quot; &amp; CallObject))</formula>
        <inlineHelpText>Please open the call recording in Firefox. (sorry)</inlineHelpText>
        <label>Call Recording Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDateTime__c</fullName>
        <formula>CreatedDate</formula>
        <label>Created Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Five9__Five9ANI__c</fullName>
        <label>Five9 ANI</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9AgentExtension__c</fullName>
        <label>Five9 Agent Extension</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9AgentName__c</fullName>
        <label>Five9 Agent Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9Agent__c</fullName>
        <label>Five9 Agent</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9CallType__c</fullName>
        <label>Five9 Call Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9CallbackCampaignId__c</fullName>
        <label>Five9CallbackCampaignId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9CallbackCampaignName__c</fullName>
        <label>Five9CallbackCampaignName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9CallbackId__c</fullName>
        <label>Five9CallbackId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9CallbackNumber__c</fullName>
        <label>Five9CallbackNumber</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Five9__Five9Campaign__c</fullName>
        <label>Five9 Campaign</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9Cost__c</fullName>
        <label>Five9 Cost</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Five9__Five9DNIS__c</fullName>
        <label>Five9 DNIS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9HandleTime__c</fullName>
        <label>Five9 Handle Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9SessionId__c</fullName>
        <label>Five9 Session Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9TalkAndHoldTimeInSeconds__c</fullName>
        <label>Five9 Talk and Hold Duration</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Five9__Five9WrapTime__c</fullName>
        <label>Five9 After Call Work Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HourActivityCreated24HrFormat__c</fullName>
        <description>Formula field to display the hour of day the activity was created, used in reporting.</description>
        <formula>VALUE(MID (TEXT (CreatedDate - 0.2502), 12, 2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hour Activity Created (24 Hr Format)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsMyTeam__c</fullName>
        <description>Formula field to indicate true if the Logged in User&apos;s Team matches the Team stamped on the activity.  Used for dynamic list views, reports, and dashboards.</description>
        <formula>IF(ISBLANK(Team__c), False,
IF(AND(ISBLANK(TEXT($User.SpoofAsTeam__c)),TEXT($User.Team__c) = Team__c), True, 
IF(TEXT($User.SpoofAsTeam__c) = Team__c, True, 
False)))</formula>
        <label>Is My Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LOCC_App__Call_Recording__c</fullName>
        <formula>HYPERLINK( LOCC_App__LO_CC_base_URL__c  &amp; &quot;/html/play.cgi?session_id=&quot; &amp; CallObject, &quot;Play Recording&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Recording</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOCC_App__LO_CC_base_URL__c</fullName>
        <label>LO CC base URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LOCC_App__calllength__c</fullName>
        <label>Call Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LOCC_App__callscore__c</fullName>
        <label>Call Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LOCC_App__campaignid__c</fullName>
        <label>Campaign ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOCC_App__campaignname__c</fullName>
        <label>Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOCC_App__dnis__c</fullName>
        <label>DNIS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOCC_App__interactionid__c</fullName>
        <label>Interaction ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOCC_App__phonenumbercountry__c</fullName>
        <label>Phone Number Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOCC_App__wrapuplength__c</fullName>
        <label>Wrap Up Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NameObjectType__c</fullName>
        <description>The object (Contact or Lead) of the related Name field.  To be able to decipher if activities are related to a Lead or not.</description>
        <formula>IF(LEFT(WhoId,3)= &apos;00Q&apos;,&apos;Lead&apos;,
IF(LEFT(WhoId,3)=&apos;003&apos;,&apos;Contact&apos;,
Null))</formula>
        <label>Name Object Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAMDisposition__c</fullName>
        <description>(Temporary) field for Sales and Account Management team members to log the disposition of an interaction.</description>
        <label>SAM Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Check-in</fullName>
                </value>
                <value>
                    <fullName>Empathy</fullName>
                </value>
                <value>
                    <fullName>Profile improvement</fullName>
                </value>
                <value>
                    <fullName>Report</fullName>
                </value>
                <value>
                    <fullName>Responsiveness</fullName>
                </value>
                <value>
                    <fullName>Retention</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAMInteractionType__c</fullName>
        <description>(Temporary) field for the Sales and Account Management team to log the type of interaction they had.</description>
        <label>SAM Interaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Outbound email</fullName>
                </value>
                <value>
                    <fullName>Inbound email</fullName>
                </value>
                <value>
                    <fullName>Outbound phone</fullName>
                </value>
                <value>
                    <fullName>Inbound phone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <description>Custom picklist field to indicate the &apos;Assigned To&apos; user&apos;s assigned team.</description>
        <label>Team</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__Additional_Emails__c</fullName>
        <inlineHelpText>Please separate emails with Comma[ , ]</inlineHelpText>
        <label>Send Email to External Attendees</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zoom_app__Customer_Duration_of_Meeting__c</fullName>
        <inlineHelpText>Enter the scheduled duration of the meeting in &quot;minutes&quot;, as a number.
Ex: 30</inlineHelpText>
        <label>Customer Meeting Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zoom_app__Customer_Start_Time__c</fullName>
        <inlineHelpText>Enter the starting time of the meeting as per customer.</inlineHelpText>
        <label>Customer Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>zoom_app__Customer_Time_Zone__c</fullName>
        <inlineHelpText>Select the proper time zone location for the customer. DST will be managed automatically.</inlineHelpText>
        <label>Customer Time Zone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pacific/Kiritimati</fullName>
                    <label>(GMT+14:00) Line Is. Time (Pacific/Kiritimati)</label>
                </value>
                <value>
                    <fullName>Pacific/Chatham</fullName>
                    <label>(GMT+12:45/+13:45) Chatham Standard / Daylight Time (Pacific/Chatham)</label>
                </value>
                <value>
                    <fullName>Pacific/Auckland</fullName>
                    <label>(GMT+12:00/+13:00) New Zealand Standard / Daylight Time (Pacific/Auckland)</label>
                </value>
                <value>
                    <fullName>Pacific/Enderbury</fullName>
                    <label>(GMT+13:00) Phoenix Is. Time (Pacific/Enderbury)</label>
                </value>
                <value>
                    <fullName>Pacific/Tongatapu</fullName>
                    <label>(GMT+13:00) Tonga Time (Pacific/Tongatapu)</label>
                </value>
                <value>
                    <fullName>Pacific/Fiji</fullName>
                    <label>(GMT+12:00) Fiji Time (Pacific/Fiji)</label>
                </value>
                <value>
                    <fullName>Asia/Kamchatka</fullName>
                    <label>(GMT+12:00) Petropavlovsk-Kamchatski Time (Asia/Kamchatka)</label>
                </value>
                <value>
                    <fullName>Australia/Lord_Howe</fullName>
                    <label>(GMT+10:30/+11:00) Lord Howe  Standard / Daylight Time (Australia/Lord_Howe)</label>
                </value>
                <value>
                    <fullName>Pacific/Norfolk</fullName>
                    <label>(GMT+11:00) Norfolk Time (Pacific/Norfolk)</label>
                </value>
                <value>
                    <fullName>Pacific/Guadalcanal</fullName>
                    <label>(GMT+11:00) Solomon Is. Time (Pacific/Guadalcanal)</label>
                </value>
                <value>
                    <fullName>Australia/Sydney</fullName>
                    <label>(GMT+10:00/+11:00) Australian Eastern Standard / Daylight Time (New South Wales) (Australia/Sydney)</label>
                </value>
                <value>
                    <fullName>Australia/Adelaide</fullName>
                    <label>(GMT+10:30/+9:30) Australian Central Standard / Daylight Time (South Australia) (Australia/Adelaide)</label>
                </value>
                <value>
                    <fullName>Australia/Darwin</fullName>
                    <label>(GMT+09:30) Australian Central Standard Time (Northern Territory) (Australia/Darwin)</label>
                </value>
                <value>
                    <fullName>Asia/Tokyo</fullName>
                    <label>(GMT+09:00) Japan Standard Time (Asia/Tokyo)</label>
                </value>
                <value>
                    <fullName>Asia/Seoul</fullName>
                    <label>(GMT+09:00) Korea Standard Time (Asia/Seoul)</label>
                </value>
                <value>
                    <fullName>Asia/Manila</fullName>
                    <label>(GMT+08:00) Philippines Time (Asia/Manila)</label>
                </value>
                <value>
                    <fullName>Asia/Kuala_Lumpur</fullName>
                    <label>(GMT+08:00) Malaysia Time (Asia/Kuala_Lumpur)</label>
                </value>
                <value>
                    <fullName>Asia/Shanghai</fullName>
                    <label>(GMT+08:00) China Standard Time (Asia/Shanghai)</label>
                </value>
                <value>
                    <fullName>Asia/Singapore</fullName>
                    <label>(GMT+08:00) Singapore Time (Asia/Singapore)</label>
                </value>
                <value>
                    <fullName>Asia/Taipei</fullName>
                    <label>(GMT+08:00) China Standard Time (Asia/Taipei)</label>
                </value>
                <value>
                    <fullName>Australia/Perth</fullName>
                    <label>(GMT+08:00) Australian Western Standard Time (Australia/Perth)</label>
                </value>
                <value>
                    <fullName>Asia/Hong_Kong</fullName>
                    <label>(GMT+08:00) Hong Kong Time (Asia/Hong_Kong)</label>
                </value>
                <value>
                    <fullName>Asia/Jakarta</fullName>
                    <label>(GMT+07:00) West Indonesia Time (Asia/Jakarta)</label>
                </value>
                <value>
                    <fullName>Asia/Bangkok</fullName>
                    <label>(GMT+07:00) Indochina Time (Asia/Bangkok)</label>
                </value>
                <value>
                    <fullName>Asia/Ho_Chi_Minh</fullName>
                    <label>(GMT+07:00) Indochina Time (Asia/Ho_Chi_Minh)</label>
                </value>
                <value>
                    <fullName>Asia/Rangoon</fullName>
                    <label>(GMT+06:30) Myanmar Time (Asia/Rangoon)</label>
                </value>
                <value>
                    <fullName>Asia/Dhaka</fullName>
                    <label>(GMT+06:00) Bangladesh Time (Asia/Dhaka)</label>
                </value>
                <value>
                    <fullName>Asia/Kathmandu</fullName>
                    <label>(GMT+05:45) Nepal Time (Asia/Kathmandu)</label>
                </value>
                <value>
                    <fullName>Asia/Kolkata</fullName>
                    <label>(GMT+05:30) India Standard Time (Asia/Kolkata)</label>
                </value>
                <value>
                    <fullName>Asia/Colombo</fullName>
                    <label>(GMT+05:30) India Standard Time (Asia/Colombo)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zoom_app__Duration_mins__c</fullName>
        <description>This field shows the actual duration of Zoom meeting.</description>
        <label>Duration (mins)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zoom_app__Google_Event_Id__c</fullName>
        <inlineHelpText>This will be populated automatically after event creation in Google Calendar.</inlineHelpText>
        <label>Google Event Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__Host_Id__c</fullName>
        <label>Host Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__IsExternal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsExternal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zoom_app__IsZoomMeeting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to mark an event is from Zoom Meetings.</description>
        <label>Is Zoom Meeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zoom_app__Join_Url__c</fullName>
        <label>Join Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__Join_before_host__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Let users join the meeting before the host arrives</inlineHelpText>
        <label>Join before host</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zoom_app__Make_it_Zoom_Meeting__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This option will schedule a zoom meeting and put the meeting link in the description</inlineHelpText>
        <label>Schedule a Zoom Meeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zoom_app__Meeting_Type__c</fullName>
        <label>Meeting Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__Participant_Count__c</fullName>
        <label>Participant Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zoom_app__Participants__c</fullName>
        <label>Participants</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zoom_app__Send_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Send email to Contact or Lead, Event Invitees and External Attendees while creating Zoom Meeting or Resend email when this field is subsequently checked after creating Zoom Meeting.</inlineHelpText>
        <label>Send Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zoom_app__Start_Url_1__c</fullName>
        <label>Start Url 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__Start_Url_2__c</fullName>
        <label>Start Url 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__Start_Url_3__c</fullName>
        <label>Start Url 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__UUID__c</fullName>
        <label>UUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__Use_personal_Zoom_meeting_Id__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Use my Zoom personal meeting id</inlineHelpText>
        <label>Use my Zoom PMI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zoom_app__Zoom_Meeting_Creation_Status__c</fullName>
        <label>Zoom Meeting Creation Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zoom_app__Zoom_Meeting_End_Time__c</fullName>
        <label>Zoom Meeting End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>zoom_app__Zoom_Meeting_Id__c</fullName>
        <label>Zoom Meeting Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__Zoom_Meeting_Start_Time__c</fullName>
        <label>Zoom Meeting Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>zoom_app__Zoom_Meeting_Status__c</fullName>
        <label>Zoom Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zoom_app__Zoom_Meeting_Status_fr__c</fullName>
        <formula>if(  ISBLANK(TEXT(zoom_app__Zoom_Meeting_Status__c)),&apos;Open&apos;,TEXT(zoom_app__Zoom_Meeting_Status__c))</formula>
        <label>Zoom Meeting Status</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>MyActivitiesAll</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.CREATED_DATE</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.CALLTYPE</columns>
        <columns>TASK.CALLDURATION</columns>
        <columns>LOCC_App__wrapuplength__c</columns>
        <columns>CallRecordingLink__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Activities - All</label>
        <sharedTo>
            <roleAndSubordinatesInternal>CustomerSuccessOrganization</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>SystemLevelAccess</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyActivitiesLast30Days</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.CREATED_DATE</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.CALLTYPE</columns>
        <columns>TASK.CALLDURATION</columns>
        <columns>LOCC_App__wrapuplength__c</columns>
        <columns>CallRecordingLink__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>My Activities - Last 30 Days</label>
        <sharedTo>
            <roleAndSubordinatesInternal>CustomerSuccessOrganization</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>SystemLevelAccess</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyActivitiesLast7Day</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.CREATED_DATE</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.CALLTYPE</columns>
        <columns>TASK.CALLDURATION</columns>
        <columns>LOCC_App__wrapuplength__c</columns>
        <columns>CallRecordingLink__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>My Activities - Last 7 Days</label>
        <sharedTo>
            <roleAndSubordinatesInternal>CustomerSuccessOrganization</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>SystemLevelAccess</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyActivitiesToday</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.CREATED_DATE</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.CALLTYPE</columns>
        <columns>TASK.CALLDURATION</columns>
        <columns>CallRecordingLink__c</columns>
        <columns>LOCC_App__wrapuplength__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>My Activities - Today</label>
        <sharedTo>
            <roleAndSubordinatesInternal>CustomerSuccessOrganization</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>SystemLevelAccess</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivitiesLast14Days</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.CREATED_DATE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.CALLTYPE</columns>
        <columns>TASK.CALLDURATION</columns>
        <columns>LOCC_App__wrapuplength__c</columns>
        <columns>CallRecordingLink__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsMyTeam__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:14</value>
        </filters>
        <label>My Team&apos;s Activities - Last 14 Days</label>
        <sharedTo>
            <role>CSManagingUserTPH</role>
            <role>CSManagingUserTSL</role>
            <role>LabsManagingUser</role>
            <role>MIManagingUser</role>
            <role>SharedServicesUserTPH</role>
            <role>SharedServicesUserTSL</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivitiesLast30Days</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.CREATED_DATE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.CALLTYPE</columns>
        <columns>TASK.CALLDURATION</columns>
        <columns>LOCC_App__wrapuplength__c</columns>
        <columns>CallRecordingLink__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsMyTeam__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>My Team&apos;s Activities - Last 30 Days</label>
        <sharedTo>
            <role>CSManagingUserTPH</role>
            <role>CSManagingUserTSL</role>
            <role>CustomerSuccessOrganization</role>
            <role>LabsManagingUser</role>
            <role>MIManagingUser</role>
            <role>SharedServicesUserTPH</role>
            <role>SharedServicesUserTSL</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivitiesLast7Days</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.CREATED_DATE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.CALLTYPE</columns>
        <columns>TASK.CALLDURATION</columns>
        <columns>LOCC_App__wrapuplength__c</columns>
        <columns>CallRecordingLink__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsMyTeam__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>My Team&apos;s Activities - Last 7 Days</label>
        <sharedTo>
            <role>CSManagingUserTPH</role>
            <role>CSManagingUserTSL</role>
            <role>CustomerSuccessOrganization</role>
            <role>LabsManagingUser</role>
            <role>MIManagingUser</role>
            <role>SharedServicesUserTPH</role>
            <role>SharedServicesUserTSL</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivitiesToday</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.CREATED_DATE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.CALLTYPE</columns>
        <columns>TASK.CALLDURATION</columns>
        <columns>LOCC_App__wrapuplength__c</columns>
        <columns>CallRecordingLink__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsMyTeam__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>My Team&apos;s Activities - Today</label>
        <sharedTo>
            <role>CSManagingUserTPH</role>
            <role>CSManagingUserTSL</role>
            <role>CustomerSuccessOrganization</role>
            <role>LabsManagingUser</role>
            <role>MIManagingUser</role>
            <role>SharedServicesUserTPH</role>
            <role>SharedServicesUserTSL</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivitiesYesterday</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.CREATED_DATE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.CALLTYPE</columns>
        <columns>TASK.CALLDURATION</columns>
        <columns>LOCC_App__wrapuplength__c</columns>
        <columns>CallRecordingLink__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsMyTeam__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CREATED_DATE</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>My Team&apos;s Activities - Yesterday</label>
        <sharedTo>
            <role>CSManagingUserTPH</role>
            <role>CSManagingUserTSL</role>
            <role>CustomerSuccessOrganization</role>
            <role>LabsManagingUser</role>
            <role>MIManagingUser</role>
            <role>SharedServicesUserTPH</role>
            <role>SharedServicesUserTSL</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NestingTeamActivitiesLast7Days</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.CREATED_DATE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.CALLTYPE</columns>
        <columns>TASK.CALLDURATION</columns>
        <columns>LOCC_App__wrapuplength__c</columns>
        <columns>CallRecordingLink__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Team__c</field>
            <operation>equals</operation>
            <value>Nesting</value>
        </filters>
        <filters>
            <field>TASK.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>Nesting Team&apos;s Activities - Last 7 Days</label>
        <sharedTo>
            <role>CSManagingUserTPH</role>
            <role>CSManagingUserTSL</role>
            <role>CustomerSuccessOrganization</role>
            <role>LabsManagingUser</role>
            <role>MIManagingUser</role>
            <role>SharedServicesUserTPH</role>
            <role>SharedServicesUserTSL</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>XAllActivitiesLast7Days</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>AssignedToManager__c</columns>
        <columns>TASK.CREATED_DATE</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.CALLTYPE</columns>
        <columns>TASK.CALLDURATION</columns>
        <columns>LOCC_App__wrapuplength__c</columns>
        <columns>CallRecordingLink__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>TASK.CALLTYPE</field>
            <operation>notEqual</operation>
        </filters>
        <label>X - All Activities Last 7 Days</label>
        <sharedTo>
            <role>SystemLevelAccess</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>XDataCleanup</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>Team__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>startsWith</operation>
            <value>Call</value>
        </filters>
        <filters>
            <field>TASK.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>X - Data Cleanup</label>
        <sharedTo>
            <role>SystemLevelAccess</role>
        </sharedTo>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>